--- a/chart/index.html
+++ b/chart/index.html
@@ -17,5 +17,5 @@
     </div>
 
 </body>
-<script type="text/javascript" src="https://d3js.org/d3.v5.js"></script>
+<script type="text/javascript" src="d3.v5.min.js"></script>
 <script type="text/javascript" src="MqebJZ.js"></script>
