--- a/cloud/index.html
+++ b/cloud/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bar chart with D3.js</title>
+    <title>Word Cloud</title>
 
     <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" href="MqebJZ.css">-->
-    <link rel="stylesheet" href="MqebJZ.css">
+    <!--<link rel="stylesheet" href="MqebJZ.css">-->
 </head>
 <body>
     <div id='layout'>
@@ -18,4 +18,5 @@
 
 </body>
 <script type="text/javascript" src="d3.v5.min.js"></script>
-<script type="text/javascript" src="MqebJZ.js"></script>
+<script type="text/javascript" src="cloud.min.js"></script>
+<script type="text/javascript" src="browserify.js"></script>
