--- a/cloud/index.html
+++ b/cloud/index.html
@@ -1,22 +1,159 @@
-﻿
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Word Cloud</title>
+﻿<!DOCTYPE html>
+<html><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Word Cloud Generator</title>
+    <style>
 
-    <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" href="MqebJZ.css">-->
-    <!--<link rel="stylesheet" href="MqebJZ.css">-->
+        body {
+            position: relative;
+            font-family: "Helvetica Neue", sans-serif;
+            width: 960px;
+            margin: auto;
+            margin-bottom: 1em;
+            margin-top: 20px;
+        }
+
+        #presets a {
+            border-left: solid #666 1px;
+            padding: 0 10px;
+        }
+
+            #presets a.first {
+                border-left: none;
+            }
+
+        #keyword {
+            width: 300px;
+        }
+
+        #fetcher {
+            width: 500px;
+        }
+
+        #keyword, #go {
+            font-size: 1.5em;
+        }
+
+        #text {
+            width: 100%;
+            height: 100px;
+        }
+
+        p.copy {
+            font-size: small;
+        }
+
+        #form {
+            font-size: small;
+            position: relative;
+        }
+
+        hr {
+            border: none;
+            border-bottom: solid #ccc 1px;
+        }
+
+        a.active {
+            text-decoration: none;
+            color: #000;
+            font-weight: bold;
+            cursor: text;
+        }
+
+        #angles line, #angles path, #angles circle {
+            stroke: #666;
+        }
+
+        #angles text {
+            fill: #333;
+        }
+
+        #angles path.drag {
+            fill: #666;
+            cursor: move;
+        }
+
+        #angles {
+            text-align: center;
+            margin: 0 auto;
+            width: 350px;
+        }
+
+            #angles input, #max {
+                width: 42px;
+            }
+    </style>
+
 </head>
+
 <body>
-    <div id='layout'>
-        <!-- <h2>Bar chart example</h2> -->
-        <div id='container'>
-            <svg />
-        </div>
+    <div id="vis">
     </div>
 
-</body>
-<script type="text/javascript" src="d3.v5.min.js"></script>
-<script type="text/javascript" src="cloud.min.js"></script>
-<script type="text/javascript" src="browserify.js"></script>
+<form id="form">
+
+<p style="position: absolute; right: 0px; top: 0px; display: none;" id="status">202/202</p>
+
+<div style="text-align: center">
+  <div id="presets"></div>
+  <div id="custom-area">
+    <p><label for="text">Paste your text below!</label>
+    </p><p><textarea id="text">
+        BTC BTC BTC LTC LTC
+        ETH ETH ETH ADA
+        LTC LTC LTC LTC LTC 
+        ZEC ZEC ZEC ZEC HT HT 
+        BCH BCH BCH BCH BCH BCH BCH
+        BSV XMR XMR XMR XMR
+        EOS EOS EOS LEO LEO LEO LEO
+        DASH DASH DASH DASH
+        XRP XRP XRP XLM XLM 
+        IOTA IOTA XTZ XTZ XTZ XTZ
+        BNB BNB BNB LINK LINK
+        TRX TRX TRX CRO CRO ETC 
+    </textarea>
+    <button id="go" type="submit">Go!</button>
+  </p></div>
+</div>
+
+<hr>
+
+<div style="float: right; text-align: right">
+  <p><label for="max">Number of words:</label> <input type="number" value="250" min="1" id="max">
+  </p><p><label for="per-line"><input type="checkbox" id="per-line"> One word per line</label>
+  <!--<p><label for="colours">Colours:</label> <a href="#" id="random-palette">get random palette</a>-->
+  </p><p><label>Download:</label>
+    <button id="download-svg">SVG</button><!-- |
+    <a id="download-png" href="#">PNG</a>-->
+</p></div>
+
+<div style="float: left">
+  <p><label>Spiral:</label>
+    <label for="archimedean"><input type="radio" name="spiral" id="archimedean" value="archimedean" checked="checked"> Archimedean</label>
+    <label for="rectangular"><input type="radio" name="spiral" id="rectangular" value="rectangular"> Rectangular</label>
+  </p><p><label for="scale">Scale:</label>
+    <label for="scale-log"><input type="radio" name="scale" id="scale-log" value="log" checked="checked"> log n</label>
+    <label for="scale-sqrt"><input type="radio" name="scale" id="scale-sqrt" value="sqrt"> √n</label>
+    <label for="scale-linear"><input type="radio" name="scale" id="scale-linear" value="linear"> n</label>
+  </p><p><label for="font">Font:</label> <input type="text" id="font" value="Impact">
+</p></div>
+
+<div id="angles">
+  <p><input type="number" id="angle-count" value="5" min="1"> <label for="angle-count">orientations</label>
+    <label for="angle-from">from</label> <input type="number" id="angle-from" value="-60" min="-90" max="90"> °
+    <label for="angle-to">to</label> <input type="number" id="angle-to" value="60" min="-90" max="90"> °
+</p><svg width="151" height="70.5"><g transform="translate(75.5,60.5)"><path d="M -40.5 0 A 40.5 40.5 0 0 1 40.5 0" style="fill: none;"></path><line x1="-47.5" x2="47.5"></line><line y2="-47.5"></line><text dy=".3em" text-anchor="end" transform="rotate(0)translate(-50.5)rotate(0)translate(2)">-90°</text><text text-anchor="middle" transform="rotate(90)translate(-50.5)rotate(-90)translate(2)">0°</text><text dy=".3em" text-anchor="start" transform="rotate(180)translate(-50.5)rotate(-180)translate(2)">90°</text><path class="angle" d="M-35.07402885326976,-20.250000000000014A40.5,40.5 0 0,1 35.074028853269766,-20.25L0,0Z" style="fill: rgb(255, 204, 0);"></path><line class="angle" transform="rotate(30)" x2="-45.5"></line><line class="angle" transform="rotate(60)" x2="-40.5"></line><line class="angle" transform="rotate(90)" x2="-40.5"></line><line class="angle" transform="rotate(120)" x2="-40.5"></line><line class="angle" transform="rotate(150)" x2="-45.5"></line><path class="drag" d="M-9.5,0L-3,3.5L-3,-3.5Z" transform="rotate(30)translate(-40.5)"></path><path class="drag" d="M-9.5,0L-3,3.5L-3,-3.5Z" transform="rotate(150)translate(-40.5)"></path></g></svg></div>
+
+<hr style="clear: both">
+
+<p style="float: right"><a href="https://www.jasondavies.com/wordcloud/about/">How the Word Cloud Generator Works</a>.
+</p><p style="float: left">Copyright © <a href="http://www.jasondavies.com/">Jason Davies</a> | <a href="https://www.jasondavies.com/privacy/">Privacy Policy</a>. The generated word clouds may be used for any purpose.
+
+</p></form>
+
+
+<script src="./files/d3.min.js"></script>
+<script src="./files/cloud.min.js"></script>
+<form action="https://www.jasondavies.com/echo" target="_blank" method="POST">
+<input type="hidden" name="content-type"><input type="hidden" name="echo">
+</form>
