--- a/cloud/index.html
+++ b/cloud/index.html
@@ -153,7 +153,7 @@
 
 
 <script src="./files/d3.min.js"></script>
-<script src="./files/cloud.min.js"></script>
+<script src="./files/cloud.js"></script>
 <form action="https://www.jasondavies.com/echo" target="_blank" method="POST">
 <input type="hidden" name="content-type"><input type="hidden" name="echo">
 </form>
