--- a/cloud/index.html
+++ b/cloud/index.html
@@ -97,8 +97,8 @@
 <div style="text-align: center">
   <div id="presets"></div>
   <div id="custom-area">
-    <p><label for="text">Paste your text below!</label>
-    </p><p><textarea id="text">
+    <p><!--<label for="text">Paste your text below!</label>-->
+    </p><p><!--<textarea id="text">
         BTC BTC BTC LTC LTC
         ETH ETH ETH ADA
         LTC LTC LTC LTC LTC 
@@ -111,8 +111,8 @@
         IOTA IOTA XTZ XTZ XTZ XTZ
         BNB BNB BNB LINK LINK
         TRX TRX TRX CRO CRO ETC 
-    </textarea>
-    <button id="go" type="submit">Go!</button>
+    </textarea>-->
+    <button id="go" type="submit">Refreash</button>
   </p></div>
 </div>
 
